[workspace]
resolver = "2"
members = [
  "engine",
  "ffi",
  "fuzz/bytes",
  "fuzz/map-keys",
  "fuzz/raw-string",
  "wasm",
]

[workspace.package]
version = "0.7.0"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
edition = "2024"
publish = true

[workspace.dependencies]
backtrace = "0.3.76"
cbindgen = "0.29.2"
cfg-if = "1.0.4"
cidr = { version = "0.2.3", features = ["serde"] }
criterion = "0.8.2"
dyn-clone = "1.0.20"
erased-serde = "0.4.9"
fnv = "1.0.7"
getrandom = "0.3.4"
indoc = "2.0.7"
js-sys = "0.3.85"
libc = "0.2.182"
memchr = "2.8.0"
num_enum = "0.7.5"
rand = "0.9.2"
regex-automata = "0.4.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde-wasm-bindgen = "0.6.5"
sliceslice = "0.4.3"
thiserror = "2.0.18"
wasm-bindgen = { version = "0.2.108", features = ["serde-serialize"] }
wildcard = "0.3.0"
wirefilter = { package = "wirefilter-engine", path = "engine" }

[profile.dev]
panic = "unwind"

[profile.release]
lto = true
panic = "unwind"
