[workspace]
resolver = "2"
members = [
  "engine",
  "ffi",
  "fuzz/bytes",
  "fuzz/map-keys",
  "fuzz/raw-string",
  "wasm",
]

[workspace.package]
version = "0.7.0"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
edition = "2024"
publish = true

[workspace.dependencies]
backtrace = "0.3.76"
cbindgen = "0.29.2"
cfg-if = "1.0.4"
cidr = { version = "0.2.3", features = ["serde"] }
criterion = "0.8.2"
dyn-clone = "1.0.20"
erased-serde = "0.4.9"
fnv = "1.0.7"
getrandom = "0.3.4"
indoc = "2.0.7"
js-sys = "0.3.85"
libc = "0.2.182"
memchr = "2.8.0"
num_enum = "0.7.5"
rand = "0.9.3"
regex-automata = "0.4.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde-wasm-bindgen = "0.6.5"
sliceslice = "0.4.3"
thiserror = "2.0.18"
wasm-bindgen = { version = "0.2.108", features = ["serde-serialize"] }
wildcard = "0.3.0"
wirefilter = { package = "wirefilter-engine", path = "engine" }

# tombi: format.rules.table-keys-order.disabled = true
[workspace.lints.clippy]
# groups
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# group exceptions
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

# tombi: format.rules.table-keys-order.disabled = true
[workspace.lints.rust]
# groups
deprecated-safe = { level = "warn", priority = -1 }
future-incompatible = { level = "warn", priority = -1 }
keyword-idents = { level = "warn", priority = -1 }
let-underscore = { level = "warn", priority = -1 }
nonstandard-style = { level = "warn", priority = -1 }
refining-impl-trait = { level = "warn", priority = -1 }
rust-2018-compatibility = { level = "warn", priority = -1 }
rust-2018-idioms = { level = "warn", priority = -1 }
rust-2021-compatibility = { level = "warn", priority = -1 }
rust-2024-compatibility = { level = "warn", priority = -1 }
unknown-or-malformed-diagnostic-attributes = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }
warnings = { level = "warn", priority = -1 }
# group exceptions
let-underscore-drop = "allow"
# ungrouped
closure-returning-async-block = "warn"
deprecated-in-future = "warn"
deref-into-dyn-supertrait = "warn"
impl-trait-redundant-captures = "warn"
linker-messages = "warn"
macro-use-extern-crate = "warn"
meta-variable-misuse = "warn"
redundant-imports = "warn"
redundant-lifetimes = "warn"
single-use-lifetimes = "warn"
trivial-numeric-casts = "warn"
unit-bindings = "warn"
unused-import-braces = "warn"
unused-lifetimes = "warn"
unused-qualifications = "warn"

[profile.dev]
panic = "unwind"

[profile.release]
lto = true
panic = "unwind"
