[package]
authors.workspace = true
name = "wirefilter-engine"
version.workspace = true
description = "An execution engine for Wireshark-like filters"
readme = "README.md"
license = "MIT"
repository = "https://github.com/cloudflare/wirefilter"
keywords = [ "wireshark", "filter", "engine", "parser", "runtime" ]
categories = [ "config", "parser-implementations" ]
edition.workspace = true

[lib]
name = "wirefilter"
bench = false

[[bench]]
name = "bench"
harness = false

[dependencies]
backtrace.workspace = true
cfg-if.workspace = true
cidr.workspace = true
fnv.workspace = true
memmem.workspace = true
rand.workspace = true
regex = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sliceslice.workspace = true
thiserror.workspace = true
wildcard.workspace = true

[dev-dependencies]
criterion.workspace = true
indoc.workspace = true

[features]
default = [ "regex" ]
