lints.workspace = true

[package]
name = "wirefilter-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "An execution engine for Wireshark-like filters"
readme = "README.md"
repository = "https://github.com/cloudflare/wirefilter"
license = "MIT"
keywords = ["engine", "filter", "parser", "runtime", "wireshark"]
categories = ["config", "parser-implementations"]
publish.workspace = true

[lib]
bench = false
name = "wirefilter"

[[bench]]
harness = false
name = "bench"

[dependencies]
backtrace.workspace = true
cfg-if.workspace = true
cidr.workspace = true
dyn-clone.workspace = true
erased-serde.workspace = true
fnv.workspace = true
memchr.workspace = true
rand.workspace = true
regex-automata = { workspace = true, optional = true }
serde.workspace = true
sliceslice.workspace = true
thiserror.workspace = true
wildcard.workspace = true

[dev-dependencies]
criterion.workspace = true
indoc.workspace = true
serde_json.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
# By default, getrandom doesn't have any source of randomness on wasm32-unknown.
# This optional dependency allows us to build with `--features getrandom/wasm_js`.
# For more information see: https://docs.rs/getrandom/#webassembly-support
getrandom.workspace = true

[features]
default = ["regex"]
regex = ["dep:regex-automata"]
