[package]
authors.workspace = true
name = "wirefilter-ffi"
version.workspace = true
description = "FFI bindings for the Wirefilter engine"
publish = false
edition.workspace = true

[package.metadata.deb]
assets = [ [ "target/release/libwirefilter_ffi.so", "usr/local/lib/libwirefilter.so", "644" ] ]

[lib]
crate-type = [ "cdylib", "rlib" ]
# Avoid duplicate compilation error messages as we don't have doctests anyway
doctest = false
bench = false

[dependencies]
fnv.workspace = true
libc.workspace = true
num_enum.workspace = true
serde.workspace = true
serde_json.workspace = true
wirefilter.workspace = true

[dev-dependencies]
indoc.workspace = true
regex.workspace = true

[target.'cfg(unix)'.dev-dependencies]
wirefilter-ffi-ctests = { path = "tests/ctests" }
