[package]
name = "macros-test"
version = "0.1.0"
authors = ["ben kornmeier <ben@protectwise.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wirefilter-engine = { path = "../engine" }
wirefilter-macros = { path = "../macros" }

