[package]
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
name = "wirefilter-wasm"
version = "0.7.0"
description = "WebAssembly bindings for the Wirefilter engine"
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib"]
# Avoid duplicate compilation error messages as we don't have doctests anyway
doctest = false

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.41"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wirefilter-engine = { path = "../engine", default-features = false }
serde-wasm-bindgen = "0.5.0"
