[package]
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
name = "wirefilter-wasm"
version = "0.7.0"
description = "WebAssembly bindings for the Wirefilter engine"
publish = false
edition = "2024"

[lib]
crate-type = ["cdylib"]
# Avoid duplicate compilation error messages as we don't have doctests anyway
doctest = false

[dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3.77"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wirefilter.workspace = true
