[package]
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
name = "wirefilter-wasm"
version = "0.7.0"
description = "WebAssembly bindings for the Wirefilter engine"
publish = false
edition = "2024"

[lib]
crate-type = ["cdylib"]
# Avoid duplicate compilation error messages as we don't have doctests anyway
doctest = false

[dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }
js-sys.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
wirefilter.workspace = true
