[package]
name = "wirefilter-parser"
version = "0.1.0"
authors = ["Ivan Nikulin <inikulin@cloudflare.com>"]
edition = "2018"

[dependencies]
cidr = "0.1.1"
pest_consume = "1.0.6"
pest = "2.1.3"
regex = { version = "1.4.3", default-features = false, features = ["std", "perf"] }

[dev-dependencies]
indoc = "1.0.3"
