[package]
name = "wirefilter-parser"
version = "0.1.0"
authors = ["Ivan Nikulin <inikulin@cloudflare.com>"]
edition = "2018"

[dependencies]
cidr = { version = "0.2.1", features = [ "serde" ] }
pest_consume = "1.0.4"
pest = "2.1.3"
regex = { version = "1.3.7", default-features = false, features = ["std", "perf"] }

[dev-dependencies]
indoc = "1.0.3"